Bug 1843540: Ensure that EventQueue::PushNameOrDescriptionChange never queues events for an Accessible outside its document. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D184070